Fix crypto QR alignment Aligned the crypto QR codes seen on the main page. Also added some padding to the images so that they don't touch the line at the bottom or the addresses.

--- a/static/style.css
+++ b/static/style.css
@@ -281,6 +281,9 @@ button#clear-search:hover {
     text-align: center ;
     padding-left: 10px ;
     padding-right: 10px ;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 .cryptoinfo code {
 	font-size: small ;
@@ -288,6 +291,8 @@ button#clear-search:hover {
 }
 .qr {
     max-height: 150px; ;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .js-only { display: none ; }
